# ASTMNIST

./: .gitignore  README.md  model.ipynb  pyproject.toml
