[project]
name = "audiodetect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.2.0",
    "matplotlib>=3.10.7",
    "torch>=2.9.0",
    "torchcodec>=0.8.0",
    "transformers>=4.57.1",
]
